# zycraft-installer

./: Cargo.toml  README.md
src/: main.rs  manifest.rs
v3.2/: 1.py  cfg.py  clear.py  clearmods.py  delup_date.py  dllist.py  finish!.py  fixmod.py  javaurl.py  missurl.py  mod_resourcepkg.py  mods.py  other.py  readme.txt  resourcepkg.py  run!.py  run.sh  shaderpacks.py  unzip.py  unzipcfg.py  update_all.bat  update_mods.bat  update_resourepkg.bat  update_shaderpacks.bat
